@@ -5,19 +5,23 @@
 
 (in-package #:clpm-client)
 
-(defvar *context* nil
-  "The default context in which to operate. Can either be a string (naming a
+(defvar *default-context* nil
+  "If non-NIL, the default context to use. Can either be a string (naming a
 global CLPM context), the symbol :BUNDLE (which refers to the currently active
 bundle, typically determined by the CLPM_BUNDLE_CLPMFILE environment variable),
 or a pathname to a clpmfile.")
 
+(defvar *active-context* nil
+  "Non-NIL if we have entered a context in this session.")
+
 (defun context ()
-  "Returns the current context. Returns *CONTEXT* if it is non-NIL. Otherwise
-returns \"default\" or :BUNDLE."
-  (or *context*
-      (if (inside-bundle-exec-p)
-          :bundle
-          "default")))
+  "Returns the current context. See *DEFAULT-CONTEXT* for possible values."
+  (or *default-context*
+      *active-context*
+      (when (inside-bundle-exec-p)
+        :bundle)
+      (clpm-exec-context)
+      "default"))
 
 (defun context-bundle-p (context)
   "A context names a bundle if it is the symbol :bundle or a pathname."
@@ -53,6 +57,18 @@ directories containing the files."
      `(context-find-system-asd-pathname ,context ,system-name))
     (clpm-proc-read proc)))
 
+(defun context-output-translations (&optional (context (context)))
+  "Return an output-translations form for CONTEXT."
+  (with-clpm-proc (proc)
+    (clpm-proc-print
+     proc
+     (if (context-bundle-p context)
+         `(with-bundle-default-pathname-defaults (,@(when (pathnamep context) (list context)))
+            (with-bundle-local-config (,@(when (pathnamep context) (list context)))
+              (bundle-output-translations ,(if (pathnamep context) context '(bundle-clpmfile-pathname)))))
+         `(context-output-translations ,context)))
+    (clpm-proc-read proc)))
+
 (defun context-source-registry (&optional (context (context)))
   "Return a source-registry form for the CONTEXT."
   (with-clpm-proc (proc)
@@ -64,3 +80,20 @@ directories containing the files."
               (bundle-source-registry ,(if (pathnamep context) context '(bundle-clpmfile-pathname)))))
          `(context-to-asdf-source-registry-form ,context)))
     (clpm-proc-read proc)))
+
+(defun enter-context (context &key activate-asdf-integration)
+  "Enter a CLPM context. This clears ASDF's current configuration and replaces
+it with configuration appropriate for CONTEXT. If ACTIVATE-ASDF-INTEGRATION is
+non-NIL, ACTIVATE-ASDF-INTEGRATION is also called.
+
+CONTEXT can be either a string (naming a global CLPM context) or a pathname
+pointing to a bundle's clpmfile."
+  (let ((source-registry (context-source-registry context))
+        (output-translations (context-output-translations context)))
+    (setf *active-context* context)
+    (asdf:clear-configuration)
+    (asdf:initialize-source-registry source-registry)
+    (when output-translations
+      (asdf:initialize-output-translations output-translations))
+    (when activate-asdf-integration
+      (activate-asdf-integration))))
