@@ -5,9 +5,13 @@
 
 (in-package #:clpm-client)
 
+(defun clpm-exec-context ()
+  "Returns the context used for `clpm exec` or NIL"
+  (uiop:getenv "CLPM_EXEC_CONTEXT"))
+
 (defun inside-bundle-exec-p ()
-  "Returns T iff we were spawned by a `clpm bundle exec` command."
-  (not (null (uiop:getenv "CLPM_BUNDLE_CLPMFILE"))))
+  "Returns non-NIL iff we were spawned by a `clpm bundle exec` command."
+  (uiop:getenv "CLPM_BUNDLE_CLPMFILE"))
 
 (defun bundle-command ()
   "Return a command (list of string) suitable for invoking the same CLPM
